# picodma-fpga

./: .gitignore  LICENSE  Shakefile.hs  constraints.xdc  default.nix  picodma-fpga.cabal  readme.md  shell.nix
ip/pcie_7xi/: pcie_7xi.dcp  pcie_7xi.veo  pcie_7xi.vho  pcie_7xi.xci  pcie_7xi.xml  pcie_7xi_sim_netlist.v  pcie_7xi_sim_netlist.vhdl  pcie_7xi_stub.v  pcie_7xi_stub.vhdl
ip/pcie_7xi/doc/: pcie_7x_v3_3_changelog.txt
ip/pcie_7xi/sim/: pcie_7xi.v
ip/pcie_7xi/source/: pcie_7xi-PCIE_X0Y0.xdc  pcie_7xi_axi_basic_rx.v  pcie_7xi_axi_basic_rx_null_gen.v  pcie_7xi_axi_basic_rx_pipeline.v  pcie_7xi_axi_basic_top.v  pcie_7xi_axi_basic_tx.v  pcie_7xi_axi_basic_tx_pipeline.v  pcie_7xi_axi_basic_tx_thrtl_ctl.v  pcie_7xi_core_top.v  pcie_7xi_gt_common.v  pcie_7xi_gt_rx_valid_filter_7x.v  pcie_7xi_gt_top.v  pcie_7xi_gt_wrapper.v  pcie_7xi_gtp_cpllpd_ovrd.v  pcie_7xi_gtp_pipe_drp.v  pcie_7xi_gtp_pipe_rate.v  pcie_7xi_gtp_pipe_reset.v  pcie_7xi_gtx_cpllpd_ovrd.v  pcie_7xi_pcie2_top.v  pcie_7xi_pcie_7x.v  pcie_7xi_pcie_bram_7x.v  pcie_7xi_pcie_bram_top_7x.v  pcie_7xi_pcie_brams_7x.v  pcie_7xi_pcie_pipe_lane.v  pcie_7xi_pcie_pipe_misc.v  pcie_7xi_pcie_pipe_pipeline.v  pcie_7xi_pcie_top.v  pcie_7xi_pipe_clock.v  pcie_7xi_pipe_drp.v  pcie_7xi_pipe_eq.v  pcie_7xi_pipe_rate.v  pcie_7xi_pipe_reset.v  pcie_7xi_pipe_sync.v  pcie_7xi_pipe_user.v  pcie_7xi_pipe_wrapper.v  pcie_7xi_qpll_drp.v  pcie_7xi_qpll_reset.v  pcie_7xi_qpll_wrapper.v  pcie_7xi_rxeq_scan.v
ip/pcie_7xi/synth/: pcie_7xi.v  pcie_7xi_ooc.xdc
nix/: default.nix  sources.json
src/: Axi.hs  Blackboxes.hs  Pcie.hs  Probe.hs  Register.hs  Search.hs  SpiSlave.hs  StreamReassembly.hs  Tlp.hs  Top.hs
src/Clash/: Minilude.hs
src/Dma/: Prelude.hs
tests/: tests.hs
tests/Test/: DmaCore.hs  Test.hs
