cabal-version: 2.2

name:          picodma-fpga
version:       0.1.0.0

-- synopsis:
-- description:
-- bug-reports:
license:       MIT
license-file:  LICENSE
author:        Ben Blaxill
maintainer:    ben.blaxill@gmail.com

-- copyright:
-- category:
build-type:    Simple

library
  exposed-modules:
    Clash.Minilude
    Dma.Prelude
    Pcie

    Axi
    Blackboxes
    Register
    Search
    SpiSlave
    StreamReassembly
    Tlp
    Top

  build-depends:
    , base >=4.11  && <4.13
    -- , base-noprelude             >=4.11  && <4.13
    , clash-lib
    , clash-prelude              >=1.1.0
    , deepseq
    , free
    , ghc-typelits-extra         >=0.3.1
    , ghc-typelits-knownnat      >=0.7.1
    , ghc-typelits-natnormalise
    , lens
    , mtl
    , template-haskell
    , data-default-class
    -- , protolude

  default-extensions:
    NoImplicitPrelude
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    MagicHash
    MonoLocalBinds
    QuasiQuotes
    ScopedTypeVariables
    TemplateHaskell
    TemplateHaskellQuotes
    TypeApplications
    TypeFamilies
    TypeOperators

  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:
    -- -Wmissing-local-signatures -fwarn-missing-signatures
    -fwarn-name-shadowing
    -fwarn-unused-binds -fwarn-unused-imports
    -fwarn-unused-matches -fwarn-empty-enumerations
    -fwarn-overflowed-literals

test-suite test
  type:               exitcode-stdio-1.0
  main-is:            tests.hs
  hs-source-dirs:     tests
  other-modules:      Test.Test, Test.DmaCore
  build-depends:
    , base >=4.11  && <4.13
    , picodma-fpga
    , clash-prelude              >=1.1.0
    , deepseq
    , free
    , ghc-typelits-extra
    , ghc-typelits-knownnat
    , ghc-typelits-natnormalise
    , interpolate
    , lens
    , mtl
    , recursion-schemes
    , tasty                      ^>=1.2
    , tasty-hunit
    , transformers
    , text

  default-extensions:
    NoImplicitPrelude
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    MagicHash
    MonoLocalBinds
    QuasiQuotes
    ScopedTypeVariables
    TemplateHaskell
    TemplateHaskellQuotes
    TypeApplications
    TypeFamilies
    TypeOperators
